[gd_scene load_steps=14 format=3 uid="uid://1kr0eijukwyf"]

[ext_resource type="Texture2D" uid="uid://bacs235tgt3c5" path="res://addons/TinySwords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_agkdw"]
[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_s44ni"]
[ext_resource type="Texture2D" uid="uid://ce05wxy18sl7r" path="res://addons/TinySwords/UI/Banners/Banner_Vertical.png" id="2_wkly8"]
[ext_resource type="Theme" uid="uid://djo0b46mh6rbk" path="res://ui/themes/text_font_theme.tres" id="3_l27fi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o6wao"]
atlas = ExtResource("1_agkdw")
region = Rect2(0, 0, 192, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3lmte"]
texture = SubResource("AtlasTexture_o6wao")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="LabelSettings" id="LabelSettings_brb12"]
font_size = 45
font_color = Color(0.247059, 0.0862745, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3qes"]
atlas = ExtResource("2_wkly8")
region = Rect2(24, 24, 144, 144)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iqdb7"]
texture = SubResource("AtlasTexture_d3qes")
texture_margin_left = 40.0
texture_margin_top = 40.0
texture_margin_right = 40.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(0, 0, 144, 144)

[sub_resource type="LabelSettings" id="LabelSettings_r44b6"]
font_size = 27
font_color = Color(0.164706, 0.168627, 0.152941, 1)

[sub_resource type="Animation" id="Animation_mivrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(353, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Score:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Score:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(378, 413)]
}

[sub_resource type="Animation" id="Animation_2ot6c"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.63902, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.513726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.482968, 1),
"update": 0,
"values": [Vector2(353, -100), Vector2(353, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Score:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Score:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.482968, 1),
"update": 0,
"values": [Vector2(378, 550), Vector2(378, 413)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmw1i"]
_data = {
"RESET": SubResource("Animation_mivrk"),
"default": SubResource("Animation_2ot6c")
}

[node name="GameOverUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s44ni")
metadata/_edit_lock_ = true

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 353.0
offset_top = 56.0
offset_right = 799.0
offset_bottom = 171.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3lmte")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -31.5
offset_right = 137.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l27fi")
text = "GAME OVER"
label_settings = SubResource("LabelSettings_brb12")
horizontal_alignment = 1

[node name="Score" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 378.0
offset_top = 413.0
offset_right = 786.0
offset_bottom = 578.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_iqdb7")

[node name="CenterContainer" type="CenterContainer" parent="Score"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Score/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="Score/CenterContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_l27fi")
text = "Time Survived:"
label_settings = SubResource("LabelSettings_r44b6")

[node name="TimeSurvived" type="Label" parent="Score/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_l27fi")
text = "00:00"
label_settings = SubResource("LabelSettings_r44b6")

[node name="Label3" type="Label" parent="Score/CenterContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("3_l27fi")
text = "Enemies Killed:"
label_settings = SubResource("LabelSettings_r44b6")

[node name="EnemiesKilleds" type="Label" parent="Score/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_l27fi")
text = "0"
label_settings = SubResource("LabelSettings_r44b6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kmw1i")
}

[node name="ResetTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
